# MSPR-ntlsystoolbox-A.M.A

./: .gitignore  AMBIGUITIES.md  CHECKLIST_ACCEPTANCE.md  EXEMPLE_EXEC_AUDIT.md  MANUAL.md  README.md  SPEC.md  SUMMARY_EN.md  TECHNICAL_DOSSIER.md  TECHNICAL_DOSSIER_FR.md  cli.py  config.example.yml  pyproject.toml  verify_modules.py
.orchids/: orchids.json
outputs/: audit_report.html
outputs/json/: backup_wms_20260122_141336.json  backup_wms_20260122_141358.json  diagnostic_20260122_141330.json  diagnostic_20260122_141352.json  obsolescence_20260122_141338.json  obsolescence_20260122_141359.json
src/ntl_systoolbox/: main.py
src/ntl_systoolbox/core/: menu.py
src/ntl_systoolbox/modules/: audit_obsolescence.py  backup_wms.py
src/ntl_systoolbox/utils/: exit_codes.py  output.py
src/ntlsystoolbox/: __init__.py  __main__.py  cli.py  main.py
src/ntlsystoolbox/core/: config.py  menu.py  reporting  result  result.py
src/ntlsystoolbox/modules/: audit_obsolescence.py  backup_wms.py  diagnostic.py
src/ntlsystoolbox/ui/: menu.py
src/ntlsystoolbox/utils/: config.py  exit_codes.py  output.py
tests/: test_smoke.py
