[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntl-systoolbox"
version = "0.1.0"
description = "Outil CLI de diagnostic et backup système"
dependencies = [
    "click", # Fortement recommandé pour éviter les input()
    "colorama",
    # Ajoute tes autres dépendances ici
]

[project.scripts]
# Format : nom-commande = package.module:fonction
ntl-systoolbox = "ntlsystoolbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
