cat > pyproject.toml <<'EOF'
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntl-systoolbox"
version = "1.0.0"
dependencies = [
    "pyyaml",
    "requests"
]

[project.scripts]
ntl-systoolbox = "ntlsystoolbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
EOF
